fix: add words to exceptions and update config

--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -2,5 +2,8 @@ matrix:
 - name: Markdown
   aspell:
     lang: en
+  dictionary:
+    wordlists:
+    - .spellcheck-exceptions.txt
   sources:
   - 'README.md'
